Creating additional activation tokens api
