# cmd/api/routes.go
@@ -28,6 +28,7 @@ func (app *application) routes() http.Handler {
 	// Authentication
 	router.HandlerFunc(http.MethodPost, "/v1/tokens/authentication", app.createAuthenticationTokenHandler)
 	router.HandlerFunc(http.MethodPost, "/v1/tokens/password-reset", app.createPasswordResetTokenHandler)
+	router.HandlerFunc(http.MethodPost, "/v1/tokens/activation", app.createActivationTokenHandler)
 
 	// Metric
 	router.Handler(http.MethodGet, "/debug/vars", expvar.Handler())
